--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1998-12-08  Herbert Valerio Riedel  <hvr@hvrlab.ml.org>
+
+	* art_svp_wind.c: added #include <string.h> for memcpy()
+
 Sun Dec  6 22:15:12 1998  Raph Levien  <raph@gimp.org>
 
 	* art_svp_wind.[ch], art_svp_vpath_stroke.[ch]: Added, but it
