--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan  4 12:47:47 1999  Raph Levien  <raph@acm.org>
+
+	* art_bpath.c (art_bpath_affine_transform): Stupid misnaming
+	of this function (forgot the "art_").
+
 Thu Dec 31 09:04:23 1998  Raph Levien  <raph@gimp.org>
 
 	* art_affine.c (art_affine_rectilinear): Added this function.
