--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Sun Jan 17 20:53:40 1999  Jeff Garzik  <jgarzik@pobox.com>
+
+	* art_affine.c:
+	Include string.h for memcpy.
+
+	* art_svp_vpath.c:
+	Remove conflicting static func definition.
+
+	* art_uta_svp.c:
+	Include art_vpath_svp.h for func definition.
+
 Mon Jan  4 12:47:47 1999  Raph Levien  <raph@acm.org>
 
 	* art_bpath.c (art_bpath_affine_transform): Stupid misnaming
