--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jun 23 15:05:43 1999  Raph Levien  <raph@gimp.org>
+
+	* art_rgb_svp.c (art_rgb_svp_alpha_opaque_callback): Missed a
+	case in the anti-segfault crusade. Thanks lewing!
+
 Wed Jun 23 11:16:42 1999  Raph Levien  <raph@gimp.org>
 
 	* art_rgb_svp.c: Made these routines so they won't segfault even
