--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-06-28  Raph Levien  <raph@gimp.org>
+
+	* art_svp_render_aa.c (art_svp_render_aa): Subtle boundary
+	case in realloc code -- was causing nasty segfaults.
+
 Wed Jun 23 15:05:43 1999  Raph Levien  <raph@gimp.org>
 
 	* art_rgb_svp.c (art_rgb_svp_alpha_opaque_callback): Missed a
