Fixed nasty uninitialized variable bug that was causing massive slowdowns with egcs-2.91.66 and -O2. Added compiler warnings.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+1999-07-02  Raph Levien  <raph@gimp.org>
+
+	* art_vpath_bpath.c (art_vpath_render_bez): Bad bad uninitialized
+	variables.
+
+	* configure.in: added compile warnings. Guess why :)
+
 1999-06-28  Raph Levien  <raph@gimp.org>
 
 	* art_svp_point.h:
