Mega-merge from gnome-libs-1-0 to CANVAS_CLEANUP so that I can finish cleaning it up - Federico

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,55 @@
+Fri Sep 24 17:53:21 1999  Raph Levien  <raph@acm.org>
+
+	* art_svp_render_aa.c (art_svp_render_insert_active): Avoid
+	reading undefined memory (thanks to Morten Welinder).
+
+1999-09-19  Raph Levien  <raph@gimp.org>
+
+	* art_pixbuf.c (art_pixbuf_duplicate): Added a duplicate function
+	at the request of Michael Meeks.
+
+1999-09-11  Raph Levien  <raph@gimp.org>
+
+	* art_affine.c (art_affine_to_string): Tightened the predicate for
+	matching rotate-only affines, which was too weak. Thanks to lewing
+	for spotting it!
+
+1999-09-01  Raph Levien  <raph@gimp.org>
+
+	* art_affine.c, art_alphagamma.c, art_bpath.c, art_gray_svp.c,
+	art_misc.c, art_pixbuf.c, art_rect.c, art_rect_svp.c,
+	art_rect_uta.c, art_rgb.c, art_rgb_affine.c,
+	art_rgb_bitmap_affine.c: Updates to api doc headers.
+
+1999-08-24  Raph Levien  <raph@gimp.org>
+
+	* art_affine.c, art_alphagamma.c, art_alphagamma.h, art_bpath.c,
+	art_bpath.h, art_gray_svp.c, art_misc.c, art_pixbuf.c,
+	art_pixbuf.h, art_point.h, art_rect.c, art_rect.h: Added api
+	documentation headers.
+
+	* testart.c: Added "dash" test, for testing the vpath_dash
+	functions.
+
+	* art_rgb_pixbuf_affine.h: Fixed the #ifdef for conditional
+	inclusion. Thanks to Kristian Hogsberg Kristensen for spotting
+	the bug.
+
+1999-08-24  Raph Levien  <raph@gimp.org>
+
+	* art_svp_render_aa.c (art_svp_render_aa): Added some tests to
+	avoid NaN for infinite slopes, which were causing problems on
+	Alphas. Closes bug #1966.
+
+1999-08-20  Federico Mena Quintero  <federico@redhat.com>
+
+	* configure.in: Fixed library's libtool version number.
+
+1999-08-03  Larry Ewing  <lewing@gimp.org>
+
+	* art_vpath_dash.c (art_vpath_dash): fix a bug/typo that was causing
+	certain paths to loop infinitely.
+
 1999-07-28  Raph Levien  <raph@gimp.org>
 
 	* art_vpath_dash.[ch]: Added a function to add a dash style
