--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-01-17  Raph Levien  <raph@gimp.org>
+
+	* art_svp_vpath_stroke.c (art_svp_vpath_stroke): Typo in api
+	header (thanks rak).
+
 2000-01-16  Timur Bakeyev  <timur@gnu.org>
 
 	* autoconf.sh: Instead of jumping between srdir and builddir just process
