--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-04-04  Raph Levien  <raph@lizardbreath.artofcode.com>
+
+	* art_uta_vpath.c (art_uta_add_line): Fixed bug that was causing
+	segfaults on alphas. Thanks to msw for localizing it.
+
 2000-01-17  Raph Levien  <raph@gimp.org>
 
 	* art_svp_vpath_stroke.c (art_svp_vpath_stroke): Typo in api
