--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-04-18  ERDI Gergo  <cactus@cactus.rulez.org>
+
+	* art_rgb_pixbuf_affine.h: Included the ArtPixBuf declaration
+
 Fri Apr 14 16:33:55 2000  Raph Levien  <raph@acm.org>
 
 	* art_svp_wind.c (art_svp_uncross, art_svp_rewind_uncrossed):
