--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-05-30  Pavel Cisler <pavel@eazel.com>
+
+	* art_rgba.c:
+	Make it build -- fix a broken include.
+
 Tue May 30 00:09:21 2000  Raph Levien  <raph@acm.org>
 
 	* art_render_gradient.c (art_render_gradient_setpix): Fixed
