--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-06-01  John Sullivan  <sullivan@eazel.com>
+
+	* art_svp_render_aa.c: (art_svp_render_aa_iter_step):
+	Made it build by correcting struct member name from
+	Raph's previous checkin.
+
 Wed May 31 11:10:58 2000  Raph Levien  <raph@acm.org>
 
 	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Updated
