--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2000-08-15  Raph Levien  <raph@acm.org>
+
+	* art_render.c (art_render_image_solid_negotiate): Only
+	sets ART_IMAGE_SOURCE_CAN_COMPOSITE when a compositing
+	callback is selected. Previously was causing segfaults on
+	non-alpha images. Thanks to Leonard Rosenthol for spotting
+	the bug.
+
 Fri Jun 30 22:56:58 2000  Raph Levien  <raph@acm.org>
 
 	* art_render.c (art_render_composite): Fixed a bug that caused
