--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-01-07  Hans Breuer <Hans@Breuer.Org>
+	* art_misc.c : embryonic change to use libart_lgpl on win32
+	* libart.def : new file, exported functions for win32 dll
+	* makefile.msc : handwritten for MSVC compiler
+
 2000-09-30  Martin Baulig  <baulig@suse.de>
 
 	* libart-2.0.pc.in: Provide pkg-config script.
