--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2001-05-22  Darin Adler  <darin@eazel.com>
+
+        * libart_lgpl/configure.in:
+	Added HTML_DIR part needed for gtk-doc build.
+
+2001-05-22  Darin Adler  <darin@eazel.com>
+
+        * art_affine.c: (art_affine_invert):
+        Fix code that would't compile do to parameter name changes for
+        documentation purposes.
+
+        * doc/libart-decl.txt:
+        * doc/tmpl/.cvsignore:
+        Quiet cvs a little bit.
+
 2001-05-20  Mathieu Lacage <mathieu@gnu.org>
 
 	* .cvsignore: chuuut.
