--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-03  Michael Meeks  <michael@ximian.com>
+
+	* Version 2.3.5 for the API freeze.
+
 2001-07-12  Darin Adler  <darin@bentspoon.com>
 
 	* art_affine.c: (art_affine_expansion): Fix handling of
