--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 26 03:11:40 2001  George Lebl <jirka@5z.com>
+
+	* gen_art_config.c: Fix 64bit issues, cast sizeof return when
+	  using %d to print it.
+
 2001-09-13  Havoc Pennington  <hp@redhat.com>
 
 	* Makefile.am: rename library to libart_lgpl_2
