--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 26 03:48:13 2001  George Lebl <jirka@5z.com>
+
+	* Release 2.3.6
+
 Wed Sep 26 03:11:40 2001  George Lebl <jirka@5z.com>
 
 	* gen_art_config.c: Fix 64bit issues, cast sizeof return when
