--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-31  Anders Carlsson  <andersca@gnu.org>
+
+	* Release 2.3.7
+
 2001-10-15  Raph Levien  <raph@pixel.artofcode.com>
 
 	* art_svp_intersect.c (art_svp_intersect_horiz): Minor
