--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-04  Anders Carlsson  <andersca@gnu.org>
+
+	* configure.in: Bump version to 2.3.8.
+
 2002-01-03  Darin Adler  <darin@bentspoon.com>
 
 	* Makefile.am: Add art_render_mask.[ch].
