--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Anders Carlsson  <andersca@gnu.org>
+
+	* Release 2.3.8
+
 2002-01-04  Anders Carlsson  <andersca@gnu.org>
 
 	* configure.in: Bump version to 2.3.8.
