--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-02-01  Alex Larsson  <alexl@redhat.com>
+
+	* art_render_gradient.c:
+	Add optimized case for depth==8,  n_channels == 3
+
+	* test_gradient.c:
+	Test case for gradients. Uses gtk+, so not built by
+	default.
+
 2002-01-10  Anders Carlsson  <andersca@gnu.org>
 
 	* Release 2.3.8
