--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-04  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
+
+	* Makefile.am: Added -lm to libart_lgpl_2_la_LIBADD
+	fixes bug 75711 (Jacob's suggestion)
+
 2002-05-08  Raph Levien  <raph@pixel.artofcode.com>
 
 	* art_uta_vpath.c (art_uta_add_line): Fixes very subtle
