--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-24  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in: Bump to 2.3.9
+
 2002-06-04  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
 
 	* Makefile.am: Added -lm to libart_lgpl_2_la_LIBADD
