--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2002-07-01  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in (LIBART_VERSION_INFO):
+	Bump to 2.3.10
+
+	* art_svp_intersect.c (art_svp_intersect_add_seg):
+	Initialize seg->wind_left to zero, this avoids
+	uninitialized memory read later in art_svp_intersect_horiz_commit.
+
 2002-06-24  Alexander Larsson  <alexl@redhat.com>
 
 	Release 2.3.9.
