--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-07-01  Alexander Larsson  <alexl@redhat.com>
 
+	* Release 2.3.10
+
+2002-07-01  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in (LIBART_VERSION_INFO):
 	Bump to 2.3.10
 
