--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-11-25  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in: Bump to 2.3.11
+
 2002-10-16  John Harper  <jsh@unfactored.org>
 
 	* art_render_svp.c (art_render_svp_callback,
