--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-05  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump to 2.3.12
+
 2003-04-24  Alexander Larsson  <alexl@redhat.com>
 
 	* art_uta_vpath.c (art_uta_from_vpath):
